--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the node controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  font-size: 24px;
+  font-family: 'Open Sans', Verdana, sans-serif;
+  margin: 82px;
+  background-color: black;
+  color: white;
+}
+
+h1 {
+  font-size: 24px;
+}
+
+h2 {
+  font-size: 24px;
+}
