good looking invisible textarea

--- a/app/views/node/view.html.erb
+++ b/app/views/node/view.html.erb
@@ -6,3 +6,9 @@
   you could change that
 <% end %>
 <%= render partial: "node", collection: @nodes %>
+
+
+<div>
+  <h2><%= @name %> by you, last saved never</h2>
+<textarea>
+</textarea>
