--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -17,3 +17,17 @@ h1 {
 h2 {
   font-size: 24px;
 }
+
+textarea {
+  font-size: 24px;
+  font-family: 'Open Sans', Verdana, sans-serif;
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
+  border: none;
+  border-color: Transparent;
+  outline: none;
+  overflow: auto;
+}
