autogrow and button

--- a/app/views/node/view.html.erb
+++ b/app/views/node/view.html.erb
@@ -9,6 +9,10 @@
 
 
 <div>
+<form method="POST">
   <h2><%= @name %> by you, last saved never</h2>
-<textarea>
+<textarea id="node-edit">
 </textarea>
+<input type="button" value="[save now]"></input>
+</form>
+</div>
