--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -25,9 +25,19 @@ textarea {
   color: white;
   width: 100%;
   height: 100%;
-  min-height: 500px;
+  min-height: 300px;
   border: none;
   border-color: Transparent;
   outline: none;
+  overflow: auto;
+}
+
+input {
+  font-size: 24px;
+  font-family: 'Open Sans', Verdana, sans-serif;
+  background-color: black;
+  color: white;
+  border: none;
+  border-color: Transparent;
   overflow: auto;
 }
