--- a/app/views/node/_node.html.erb
+++ b/app/views/node/_node.html.erb
@@ -1,5 +1,9 @@
+<% if node == your_node %>
+    <%= render partial: "node_edit", object: node %>
+<% else %>
 <div>
   <h2><%= node.name %> by <%= node.author.name %> at <%= node.created_at %></h2>
   <div><%= node.render_body %></div>
   <br>
 </div>
+<% end %>
