--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,11 @@
 
 <%= yield %>
 
+<div id="footer">
+<% if not @current_user %>[ log in ]<% end %>
+<% if not @current_user %><a href="/ /sign up">[ sign up ]</a><% end %>
+<% if @current_user %>[ log out ]<% end %>
+</div>
+
 </body>
 </html>
