--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -10,6 +10,15 @@ body {
   color: white;
 }
 
+a {
+  text-decoration: none;
+  color: cyan;
+}
+
+a.nodeshell {
+  color: red;
+}
+
 h1 {
   font-size: 24px;
 }
