--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -5,9 +5,9 @@
 body {
   font-size: 24px;
   font-family: 'Open Sans', Verdana, sans-serif;
-  margin: 82px;
   background-color: black;
   color: white;
+  text-align: center;
 }
 
 a {
