--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -1,5 +1,5 @@
-<form method="post">
-<label for="login-name" class="login">name</label><input id="login-name" class="login"></input><br>
-<label for="login-pass" class="login">pass</label><input id="login-pass" class="login" type="password"></input><br>
+<%= form_tag "/%20/log%20in", method: "post" do%>
+<label for="login-name" class="login">name</label><input id="login-name" name="name" class="login"></input><br>
+<label for="login-pass" class="login">pass</label><input id="login-pass" name="pass" class="login" type="password"></input><br>
 <label class="login"></label><input class="login button" type="submit" value="[sumbit]"></input>
-</form>
+<% end %>
