--- a/app/views/node/_node_edit.html.erb
+++ b/app/views/node/_node_edit.html.erb
@@ -1,8 +1,8 @@
 <div>
 <form method="POST">
   <h2><%= @name %> by you, last saved never</h2>
-<textarea id="node-edit">
-</textarea>
+<textarea id="node-edit" autofocus>
+</textarea><br>
 <input type="button" value="[save now]"></input>
 </form>
 </div>
