--- a/app/views/node/_node_edit.html.erb
+++ b/app/views/node/_node_edit.html.erb
@@ -1,8 +1,10 @@
 <div>
-<form method="POST">
+<br>
+<hr>
+<%= form_tag nil, method: "post" do%><a name="edit"></a>
   <h2><%= @name %> by you, last saved never</h2>
-<textarea id="node-edit" autofocus>
-</textarea><br>
-<input type="button" value="[save now]"></input>
-</form>
+<textarea id="node-edit" name="node" autofocus><%= @your_node.body %></textarea><br>
+<input type="submit" value="[save now]"></input>
+<% end %>
+<hr>
 </div>
