--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -86,7 +86,7 @@ input {
   font-size: 24px;
   font-family: 'Open Sans', Verdana, sans-serif;
   background-color: black;
-  color: white;
+  color: lightgreen;
   border: none;
   border-color: Transparent;
   overflow: auto;
