--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 <div id="footer">
 <% if not @current_user %><a href="/ /log in">[ log in ]</a><% end %>
 <% if not @current_user %><a href="/ /sign up">[ sign up ]</a><% end %>
-<% if @current_user %>[ log out ]<% end %>
+<% if @current_user %><a href="/ /log out">[ log out ]</a><% end %>
 </div>
 
 </body>
