--- a/app/views/node/_node.html.erb
+++ b/app/views/node/_node.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h2><%= node.name %> by <%= node.author.name %> at <%= node.created_at %>
     <% if node.author == current_user %>
-        <label for="node-edit">(edit!)</label>
+        <label for="node-edit">[edit!]</label>
     <% end %>
   </h2>
   <div><%= node.render_body %></div>
