--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -99,6 +99,10 @@ input.login {
   padding: 5px;
 }
 
+input[type="submit"] {
+  cursor: pointer;
+}
+
 input.login.button {
   border: none;
   width:305px;
