--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
 <% end %>
 <% if @current_user %>
   <a href="/*/welcome home">[ welcome ]</a>
+  <a href="/ /invite">[ invite ]</a>
   <a href="/ /log out">[ log out ]</a>
 <% end %>
 </div>
