--- a/app/views/node/node.html.erb
+++ b/app/views/node/node.html.erb
@@ -6,6 +6,9 @@
   you could change that
 <% end %>
 <%= render partial: "node", collection: @nodes, locals: {current_user: @current_user} %>
+<hr>
+<h2>softlinks</h2>
+<%= render partial: "softlink", collection: @softlinks, locals: {current_user: @current_user} %>
 
 <% if @current_user %>
   <%= render partial: "node_edit" %>
