italic softlink heading

--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -67,6 +67,10 @@ h2 {
   font-size: 24px;
 }
 
+h2.softlinks {
+  font-style: "italic";
+}
+
 textarea {
   font-size: 24px;
   font-family: 'Open Sans', Verdana, sans-serif;
