--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -67,6 +67,10 @@ h2.softlinks {
   font-style: italic;
 }
 
+h2.search-results {
+      transform: skew(10deg, 0deg);
+}
+
 textarea {
   font-size: 24px;
   font-family: 'Open Sans', Verdana, sans-serif;
