--- a/app/views/invite/index.html.erb
+++ b/app/views/invite/index.html.erb
@@ -1,8 +1,10 @@
 <h1>give a friend a housekey?</h1>
+<ul>
 <% if @total == 0 %>
-    you don't have any yet. bug jes about it.
+  <li>you don't have any yet. bug jes about it.</li>
 <% end %>
 <%= render partial: "invite", collection: @invites, locals: {current_user: @current_user} %>
-<% if @total > 0 and @unused == 0 %>
-    you don't have any spares right now. Consider bugging jes for more.
+<% if @total > 0 and @unused == 0 or true%>
+  <li style="list-style-type: circle">you don't have any spares right now.<br>Consider bugging jes for more.</li>
 <% end %>
+</ul>
