--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -71,6 +71,12 @@ h2.search-results {
       transform: skew(10deg, 0deg);
 }
 
+ul {
+    text-align: left;
+    vertical-align: center;
+    display: inline-block;
+}
+
 textarea {
   font-size: 24px;
   font-family: 'Open Sans', Verdana, sans-serif;
