--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -189,6 +189,17 @@ hr {
     top: 5px;
 }
 
+.presences {
+    position: fixed;
+    bottom: 0px;
+    background: black;
+    width: 100%;
+    text-align: left;
+    font-size: 12pt;
+    height: 25px;
+    overflow: none;
+}
+
 .footer-go {
     display: inline;
 }
