--- a/app/views/node/_node_edit.html.erb
+++ b/app/views/node/_node_edit.html.erb
@@ -4,7 +4,7 @@
 <%= form_tag nil, method: "post" do%><a name="edit"></a>
 <h2 class="node-edit"><label for="node-edit"><%= @name %>
         <%= select_tag "noun_type", options_for_select(%w[person place thing idea], @your_node.noun_type || 'idea'), :class => "noun-type" %>
-by you (<%= @current_user %>), last saved <%= @your_node.updated_at ? @your_node.updated_at.in_time_zone("US/Pacific").strftime("%b %-d, %Y %l:%M%p") : "never" %></label></h2>
+by you (<span class="your-name"><%= @current_user %></span>), last saved <%= @your_node.updated_at ? @your_node.updated_at.in_time_zone("US/Pacific").strftime("%b %-d, %Y %l:%M%p") : "never" %></label></h2>
 <textarea id="node-edit" name="node"><%= @your_node.editable_body %></textarea><br>
 <input type="submit" value="[save now]"></input>
 <% end %>
