--- a/app/views/node/_presences.html.erb
+++ b/app/views/node/_presences.html.erb
@@ -1,3 +1,3 @@
 <div class="presences">
-<%= render partial: "presence", collection: (presences * 100), locals: {current_user: current_user} %>
+<%= render partial: "presence", collection: presences, locals: {current_user: current_user} %>
 </div>
