fix title when back buttoning

--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -133,7 +133,8 @@ input {
 input.title {
   color: white;
   text-align: center;
-  font-weight: bold
+  font-weight: bold;
+  width: 100%;
 }
 
 input.login {
