--- a/app/views/node/_go.html.erb
+++ b/app/views/node/_go.html.erb
@@ -1,4 +1,4 @@
 <%= form_tag "/%20/go", {:class => local_assigns[:klass]} do %>
-<%= hidden_field_tag "namespace", namespace %>
-<label class="visible-label" for="<%= section %>-go-name">[&nbsp;</label><input name="name" id="<%= section %>-go-name"></input><label class="visible-label" for="<%= section %>-go-name">&nbsp;]</label>
+<%= hidden_field_tag "namespace", namespace %><nobr>
+<label class="visible-label" for="<%= section %>-go-name">[&nbsp;</label><input name="name" id="<%= section %>-go-name"></input><label class="visible-label" for="<%= section %>-go-name">&nbsp;]</label></nobr>
 <% end %>
