annotations can be displayed!!!!!!

--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -55,6 +55,25 @@ a.new-link {
   color: MediumVioletRed;
 }
 
+a.annotation-link {
+  color: white;
+  border-bottom: 1px dashed cyan;
+}
+
+a.annotation-link.new-link {
+  border-bottom: 1px dashed MediumVioletRed;
+}
+
+a.annotation-link sup{
+  text-decoration: none;
+  font-size: 50%;
+  color: cyan;
+}
+
+a.annotation-link.new-link sup{
+  color: MediumVioletRed;
+}
+
 h1 {
   font-size: 24px;
 }
