--- a/app/views/node/node.html.erb
+++ b/app/views/node/node.html.erb
@@ -16,6 +16,7 @@
 <%= render partial: "softlink", collection: @softlinks, locals: {current_user: @current_user} %>
 <%= render partial: "go", locals: {section: "softlink", namespace: @namespace} %>
 <%= render partial: "search_results", locals: {current_user: @current_user, search_results: @search_results} %>
+<%= render partial: "annotate", locals: {current_user: @current_user, namespace: @namespace, name: @name} %>
 
 <% if @current_user %>
   <%= render partial: "node_edit" %>
