fix zindex on annotate popup

--- a/app/assets/stylesheets/node.scss
+++ b/app/assets/stylesheets/node.scss
@@ -83,6 +83,7 @@ form#annotate {
     vertical-align: middle;
     border-top: 1px solid green;
     background-color: black;
+    z-index: 1;
 }
 
 #annotate-destination {
